# data-orchestration

./: .cruft.json  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-question.yml  03-feature-request.yml  config.yml
.github/workflows/: cron.yml  main.yml
docs/: entity_model.md  index.md
notebooks/: compounds.ipynb  mnx_chem_prop.ipynb  reactions.ipynb
src/data_orchestration/: __init__.py
src/data_orchestration/assets/: __init__.py  opentecr.py  types.py
src/data_orchestration/helpers/: __init__.py  config.py  metadata.py  validation.py
src/data_orchestration/io/: __init__.py  pandas_arrow_io_manager.py  polars_arrow_io_manager.py
src/data_orchestration/metanetx/: __init__.py  asset.py  config.py  op.py  resource.py  types.py
src/data_orchestration/opentecr/: __init__.py  asset.py  config.py  helpers.py  op.py  resource.py  types.py
src/data_orchestration/opentecr/asset/: __init__.py  bronze.py  gold.py  silver.py
tests/integration/: test_metanetx.py  test_opentecr.py
tests/system/: test_import.py
